some minor changes maybe

--- a/google-odin.html
+++ b/google-odin.html
@@ -5,6 +5,7 @@
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
         <link rel="shortcut icon" href="images/favicon.ico" />
+        <link rel="stylesheet" href="google-odin.css">
     </head>
     <body>
         <style>
@@ -55,10 +56,18 @@
             border-radius: 4px;
             background-color: rgb(228, 228, 228);
         }
+        .thebutt:hover{
+            box-shadow: 2px 2px 4px 2px rgb(228, 225, 225);
+        }
         .signbutt{
             background-color: rgb(87, 151, 177);
             height: 33px;
             width: 70px;
+
+        }
+        .footbutt{
+            margin-top: 105px;
+            text-align: end;
 
         }
         </style>
@@ -71,7 +80,8 @@
     <main>
         <img id= "logo" src="images/googlelogo.png" alt="Google logo">
     <div class="bar">
-        <input class="bar" type="search" name="Search" >
+        <input class="bar" type="search" name="Search">
+        
     </div>
     <div class="buttons">
     <button class="thebutt">Google Search
@@ -83,6 +93,12 @@
         <a href="#">मराठी</a> <a href="#">தமிழ்</a> <a href="#">ગુજરાતી</a> <a href="#">ಕನ್ನಡ</a> 
         <a href="#">മലയാളം </a> <a href="#">ਪੰਜਾਬੀ</a>    </h5>
 </div>
+<footer>
+    <div class="footbutt">
+        <hr>
+        <a href="#">Privacy</a> <a href="#">Terms </a> <a href="#"> Settings</a>
+    </div>
+</footer>
     </main>
     </body>
 </html>
